--- a/style.css
+++ b/style.css
@@ -4,8 +4,20 @@ html, body {
     height: 100%;
     
 }
+#regholder{
+text-align: center;
+width: 100%;
+height: 100%;
+margin-left: 25%;
+}
+#footerBar{
+    height: 100%;
+    width: 100%;
+    max-height: 300px;
+}
+
 #buttonRegisterC{
-width: 30%;
+width: 60%;
 }
 .form-check-input2{
     width: 30%;
@@ -18,33 +30,46 @@ width: 30%;
 .form-check-input{
 text-align: center;
 position: relative;
-margin: 0.3%;
+width: 350px;
 }
 #navbar{
     border-bottom: solid 2px black;
 }
-#leftPanel1{
+#leftPanel0{
+    background: lightgrey;
+    border: solid 1px black;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    vertical-align: middle;
+    padding: 0;
+    margin: 0;
+    padding: 1%
+    }
+    #rightPanel0{
+        background: lightgrey;
+        border: solid 1px black;
+        width: 100%;
+        height: 100%;
+        position: relative;
+        padding: 1%;
+        margin: 0;
+        }
+#leftPanel1, #rightPanel1{
+overflow-y: auto;
 background: lightgrey;
 border: solid 1px black;
 width: 100%;
-height: 100%;;
+height: 100%;
+max-height: 300px;
 position: relative;
 padding: 0;
 margin: 0;
 padding-bottom: 2%;
 }
-#rightPanel1{
-    border: solid 1px black;
-    background:lightgrey;
-    width: 100%;
-    height: 100%;;
-    position: relative;
-    padding: 0;
-    margin: 0;
-    padding-bottom: 2%;
-}
+
 #leftPanel2{
-    border: solid 1px black;
+border: solid 1px black;
 background:lightgrey;
 width: 100%;
 height: 100%;
@@ -58,7 +83,7 @@ display: inline-block;
     border: solid 1px black;
     background:lightgrey;
     width: 100%;
-    height: 100%;;
+    height: 100%;
     position: relative;
     padding: 0;
     margin: 0;
@@ -76,6 +101,7 @@ display: inline-block;
 .container-fluid{
 text-align: center;
 padding: 0;
+height: 100%;
 
 }
 
@@ -87,9 +113,17 @@ padding: 0;
 
 }
 
-@media (max-width: 500px) {
+@media (max-width: 768px) {
     .headerPanel{
         padding-left: 5%;
+    }
+    #rightPanel1{
+        text-align: center;
+        max-height: 150px;
+    }
+    #leftPanel1{
+        text-align: center;
+        max-height: 150px;
     }
     #leftPanel2{
         display: inline-block;
@@ -99,4 +133,11 @@ padding: 0;
         width: 40%;
        
     }
+    #regholder{
+
+        margin-left: 5%;
+        }
+        #buttonRegisterC{
+            width: 35%;
+        }
 }
