--- a/style.css
+++ b/style.css
@@ -52,15 +52,15 @@ width: 350px;
     margin: 0;
     padding: 1%
     }
-    #rightPanel0{
-        background: lightgrey;
-        border: solid 1px black;
-        width: 100%;
-        height: 100%;
-        position: relative;
-        padding: 1%;
-        margin: 0;
-        }
+#rightPanel0{
+    background: lightgrey;
+    border: solid 1px black;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    padding: 1%;
+    margin: 0;
+    }
 #leftPanel1, #rightPanel1{
 overflow-y: auto;
 background: lightgrey;
@@ -94,6 +94,7 @@ display: inline-block;
     padding: 0;
     margin: 0;
     padding-bottom: 2%;
+    display: inline-block;
 }
 .headerPanel2, .headerPanel{
     height: 100%;
@@ -121,8 +122,6 @@ height: 100%;
     width: 100%;
     background-color: white;
     height: 50px;
-    
-
 }
 
 @media (max-width: 768px) {
@@ -137,6 +136,9 @@ height: 100%;
         text-align: center;
         max-height: 150px;
     }
+    #rightPanel2{
+        display: inline-block;
+    }
     #leftPanel1{
         text-align: center;
         max-height: 150px;
@@ -147,7 +149,10 @@ height: 100%;
     .regCustomerText{
         display: inline-block;
         width: 40%;
-       
+    }
+    .RegOrder{
+        display: inline-block;
+        width: 40%;
     }
     #regholder{
 
